# OpenScan-OpenScanNIDAQ

./: .gitignore  .pre-commit-config.yaml  Acquisition.c  Acquisition.h  Clock.c  Clock.h  Detector.c  Detector.h  NIDAQ_DeviceImplData.c  NIDAQ_DeviceImplData.h  NIDAQ_OpenScanDevice.c  NIDAQ_OpenScanDevice.h  NIDAQ_OpenScanModule.c  NIDAQ_OpenScanSettings.c  NIDAQ_OpenScanSettings.h  OScNIDAQ.c  OScNIDAQ.h  OScNIDAQDevice.c  OScNIDAQDevice.h  OScNIDAQDevicePrivate.h  OScNIDAQPrivateData.h  OScNIDAQSettings.c  OpenScanNIDAQ.sln  OpenScanNIDAQ.vcxproj  OpenScanNIDAQ.vcxproj.filters  ParkUnpark.c  ParkUnpark.h  README.md  Scanner.c  Scanner.h  Waveform.c  Waveform.h  meson.build
DumpWaveform/: .gitignore  AnimateWaveform.ipynb  DumpWaveform.c  DumpWaveform.vcxproj  DumpWaveform.vcxproj.filters  meson.build
WaveformTool/: README.md  WaveformTool.c  meson.build  waveform_viewer.py
src/: Acquisition.c  Acquisition.h  Clock.c  Clock.h  DAQConfig.c  DAQConfig.h  DAQError.c  DAQError.h  Detector.c  DeviceImplData.c  DeviceImplData.h  OpenScanDevice.c  OpenScanModule.c  OpenScanSettings.c  ParkUnpark.c  Scanner.c  Scanner.h  Waveform.c  Waveform.h  meson.build
subprojects/: .gitignore  ssstr.wrap
